# nokia3310

./: .gitignore  Cargo.toml  Web.toml
src/: component.rs  components.rs  entity_creator.rs  externs.rs  keyboard.rs  main.rs  sdl_helpers.rs  systems.rs
static/: index.html  index~.html
static/assets/: real_fonts.aseprite
