[package]
name = "nokia-game-jam"
version = "0.1.0"
authors = ["Malik"]
edition = "2018"
build = "build.rs"

[dependencies]
specs = { version = "0.16.1", features = ["specs-derive"]}
rand = "*"
emscripten_main_loop = "0.1"
#sdl2 = "0.34"
#sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.sdl2]
version = "0.33"
default-features = false
#features = ["image", "unsafe_textures"]#"bundled",""gfx", "mixer"]#,"tff", "mixer"]#"static-link"
features = ["image", "unsafe_textures"]

#[package.metadata.vcpkg]
#dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
#git = "https://github.com/microsoft/vcpkg"
#rev = "a0518036077baa4"

#[package.metadata.vcpkg.target]
#x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

